# SNCuts

./: .gitignore  CD.brio  CMakeLists.txt  README.md  SD.brio  SNCutsPipeline.conf  SNCutsPipeline.conf.in  install_test.sh  sensitivity.root
include/: CDHit.hh  Event.hh  Filters.hh  Particle.hh  SDParticle.hh  SNCuts.h  SNCuts.hh
lib/: Eventdict_rdict.pcm  Particledict_rdict.pcm
src/: CDHit.cpp  Event.cpp  Filters.cpp  Particle.cpp  SDParticle.cpp  SNCuts.cpp
src/dicts/: CDBankdict.cpp  CDHitdict.cpp  Constantsdict.cpp  Eventdict.cpp  Filtersdict.cpp  PTDParticledict.cpp  Particledict.cpp  SDParticledict.cpp
test/: 2nubb.conf  CD.brio  Default.root  EnePhiDist_Job23.root  Job23.cpp  SD.brio
